--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
       <p> The man who saved a billion lives</p>
 
       <figure id="img-div">
-        <img id="image" src="">
+        <img id="image" src="./css/tribute-page-main-image.jpg">
         <p id="img-caption">Dr. Norman Borlaug, third from the left, trains biologists in Mexico on how to increase wheat yields - part of his life-long war on hunger.</p>
       </figure>
 
       <div id="tribute-info">
+        <h2>Here's a timeline of Dr.Borlaug's life:</h2>
         <ul>
           <li><b>1914</b> - Born in Cresco, Iowa</li>
           <li><b>1933</b> - Leaves his family's farm to attend the University of Minnesota, thanks to a Depression era program known as the "National Youth Administration"</li>
@@ -39,7 +40,7 @@
         <blockquote>
           <i>"Borlaug's life and achievement are testimony to the far-reaching contribution that one man's towering intellect, persistence and scientific vision can make to human peace and progress."</i>
         </blockquote>
-        <i>-- Indian Prime Minister Manmohan Singh</i>
+        <i>-- Indian Prime Minister Manmohan Singh</p>
 
         <p>
           If you have time, you should read more about this incredible human being on his <a id="tribute-link" target="_blank" href="https://en.wikipedia.org/wiki/Norman_Borlaug">Wikipedia entry.
